# CAREERGUIDE_

./: .env.example  .gitignore  .pre-commit-config.yaml  01_SRS.md  02_ARCHITECTURE.md  03_TECH_STACK.md  04_DATABASE_SCHEMA.md  05_AGENT_WORKFLOWS.md  06_RAG_PIPELINE.md  07_API_SPEC.md  08_DATA_ENGINEERING.md  09_UI_WIREFRAMES.md  10_TESTING_STRATEGY.md  11_DEPLOYMENT_MLOPS.md  12_ROADMAP_MILESTONES.md  13_EXECUTION_PLAN.md  LICENSE  Makefile  PROGRESS.md  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: main.py  schemas.py
apps/api/app/adapters/: __init__.py  db.py  github.py  models.py  storage.py
apps/api/app/agents/: chat.py  chat_stream.py  github_agent.py  graph.py  orchestrator.py  planner.py  resume_agent.py  state.py  verification.py
apps/api/app/agents/llm/: anthropic.py  factory.py  fake.py  gemini.py  groq.py  port.py
apps/api/app/api/: auth.py  chat.py  conversations.py  deps.py  github.py  health.py  oauth.py  profile.py  resume.py  roadmap.py
apps/api/app/core/: config.py  errors.py  logging.py  security.py
apps/api/app/domain/: __init__.py
apps/api/app/rag/: __init__.py  chunking.py  citations.py  embeddings.py  eval.py  factory.py  ingest.py  ports.py  rerank.py  retriever.py  types.py  vector_store.py
apps/api/app/rag/sources/: wikipedia.py
apps/api/app/services/: __init__.py  auth_service.py  conversation_service.py  gap_service.py  github_service.py  memory_service.py  onboarding_service.py  profile_service.py  readiness_service.py  resume_parser.py  resume_service.py  roadmap_service.py  skill_service.py
apps/api/app/workers/: __init__.py
apps/api/data_seed/: demo_chat.py  eval_rag.py  ingest_wikipedia.py  seed_rag.py  seed_taxonomy.py
apps/api/docs/: rag_eval_baseline.json
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_create_users.py  0002_profiles_skills.py  0003_readiness_scores.py  0004_conversations_messages.py  0005_roadmaps.py  0006_resumes.py  0007_github.py
apps/api/tests/: conftest.py  test_agents.py  test_auth.py  test_chat_week8.py  test_github.py  test_health.py  test_onboarding.py  test_profile.py  test_rag.py  test_rag_eval.py  test_resume.py  test_roadmap_week9.py  test_wikipedia_ingest.py
apps/web/: package-lock.json  (+1 more)
docs/: dev-setup.md  manual-test.md
infra/: docker-compose.yml
(+13 files in other folders)
